--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "cheerio": "^1.0.0",
     "csv-writer": "^1.6.0",
     "docx": "^9.1.0",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "nodemailer": "^6.9.16",
+    "openai": "^4.75.0",
     "puppeteer": "^23.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
